--- a/ars-reservation/ars-reservation-service/pom.xml
+++ b/ars-reservation/ars-reservation-service/pom.xml
@@ -7,6 +7,36 @@
     <relativePath>..</relativePath>
   </parent>
   <artifactId>ars-reservation-service</artifactId>
+  <packaging>ejb</packaging>
   <name>ars-reservation-service</name>
   <description>Service implementations</description>
+  
+  <dependencies>
+		<dependency>
+			<groupId>org.jboss.spec</groupId>
+			<artifactId>jboss-javaee-7.0</artifactId>
+			<version>1.0.0.Final</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-reservation-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<!-- this is false by default -->
+					<ejbVersion>3.1</ejbVersion>
+					<generateClient>true</generateClient>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
