--- a/ars-reservation/ars-reservation-api/.project
+++ b/ars-reservation/ars-reservation-api/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ars-reservation-client</name>
+	<name>ars-reservation-api</name>
 	<comment></comment>
 	<projects>
 	</projects>
