--- a/ars-api/pom.xml
+++ b/ars-api/pom.xml
@@ -6,7 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
-  <artifactId>ars-client</artifactId>
+  <artifactId>ars-api</artifactId>
   <packaging>pom</packaging>
   <description>Common master POM for -client projects</description>
 </project>
