--- a/ars-dist/pom.xml
+++ b/ars-dist/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>ars</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>ars-ear</artifactId>
+	<artifactId>ars-dist</artifactId>
 	<packaging>ear</packaging>
 	<description>Java EE Ear Deployable maven module</description>
 	<properties>
@@ -18,17 +18,16 @@
 			<groupId>com.prodyna.pac.ars</groupId>
 			<artifactId>ars-masterdata-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-			<type>ejb</type>
+			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>com.prodyna.pac.ars</groupId>
 			<artifactId>ars-reservation-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-			<type>ejb</type>
+			<type>war</type>
 		</dependency>
 	</dependencies>
 	<build>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -36,6 +35,8 @@
 				<version>2.9</version>
 				<configuration>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
+
+					<fileNameMapping>no-version</fileNameMapping>
 				</configuration>
 			</plugin>
 		
