--- a/ars-masterdata/ars-masterdata-api/.project
+++ b/ars-masterdata/ars-masterdata-api/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ars-masterdata-client</name>
+	<name>ars-masterdata-api</name>
 	<comment></comment>
 	<projects>
 	</projects>
