--- a/ars-masterdata/ars-masterdata-service/pom.xml
+++ b/ars-masterdata/ars-masterdata-service/pom.xml
@@ -2,41 +2,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>ars-masterdata</artifactId>
+		<artifactId>ars-service</artifactId>
 		<groupId>com.prodyna.pac.ars</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>ars-masterdata-service</artifactId>
 	<name>ars-masterdata-service</name>
-	<packaging>ejb</packaging>
+	<packaging>war</packaging>
 	<description>Service implementations for masterdata management</description>
+	
 	<dependencies>
 		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-7.0</artifactId>
-			<version>1.0.0.Final</version>
-			<type>pom</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.prodyna.pac.ars</groupId>
-			<artifactId>ars-masterdata-client</artifactId>
+			<artifactId>ars-masterdata-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-ejb-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<!-- this is false by default -->
-					<ejbVersion>3.1</ejbVersion>
-					<generateClient>true</generateClient>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
