--- a/ars-reservation/ars-reservation-service/pom.xml
+++ b/ars-reservation/ars-reservation-service/pom.xml
@@ -1,42 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>ars-reservation</artifactId>
-    <groupId>com.prodyna.pac.ars</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>..</relativePath>
-  </parent>
-  <artifactId>ars-reservation-service</artifactId>
-  <packaging>ejb</packaging>
-  <name>ars-reservation-service</name>
-  <description>Service implementations</description>
-  
-  <dependencies>
-		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-7.0</artifactId>
-			<version>1.0.0.Final</version>
-			<type>pom</type>
-			<scope>provided</scope>
-		</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>ars-service</artifactId>
+		<groupId>com.prodyna.pac.ars</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
+	</parent>
+	<artifactId>ars-reservation-service</artifactId>
+	<packaging>war</packaging>
+	<name>ars-reservation-service</name>
+	<description>Service implementations</description>
+
+	<dependencies>
 		<dependency>
 			<groupId>com.prodyna.pac.ars</groupId>
-			<artifactId>ars-reservation-client</artifactId>
+			<artifactId>ars-reservation-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-ejb-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<!-- this is false by default -->
-					<ejbVersion>3.1</ejbVersion>
-					<generateClient>true</generateClient>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 </project>
