--- a/ars-api/pom.xml
+++ b/ars-api/pom.xml
@@ -6,12 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
-  <artifactId>ars-reservation</artifactId>
+  <artifactId>ars-api</artifactId>
   <packaging>pom</packaging>
-  <name>ars-reservation</name>
-  <description>Reservation Model and Services</description>
-  <modules>
-  	<module>ars-reservation-api</module>
-  	<module>ars-reservation-service</module>
-  </modules>
+  <description>Common master POM for -client projects</description>
 </project>
