further work sync

--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,15 @@
         </plugin>
     </plugins>
   </build>
-  <dependencyManagement>
+  <!-- dependencyManagement>
    <dependencies>
-   <dependency>
-   <groupId>junit</groupId>
-   <artifactId>junit</artifactId>
-   <version>4.11</version>
-   </dependency>
+	   	<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
    </dependencies>
-  </dependencyManagement>
+  </dependencyManagement-->
   <modules>
   	<module>ars-reservation</module>
   	<module>ars-masterdata</module>
