--- a/ars-service/ars-service-rest/pom.xml
+++ b/ars-service/ars-service-rest/pom.xml
@@ -8,4 +8,29 @@
   <artifactId>ars-service-rest</artifactId>
   <name>ars-service-rest</name>
   <packaging>war</packaging>
+  
+  <build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+					</configuration>
+					<inherited>true</inherited>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-ejb-plugin</artifactId>
+					<version>2.3</version>
+					<configuration>
+						<!-- this is false by default -->
+						<ejbVersion>3.1</ejbVersion>
+						<generateClient>true</generateClient>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
