--- a/ars-masterdata/ars-masterdata-api/pom.xml
+++ b/ars-masterdata/ars-masterdata-api/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>ars-api</artifactId>
+		<artifactId>ars-masterdata</artifactId>
 		<groupId>com.prodyna.pac.ars</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../..</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>ars-masterdata-api</artifactId>
 	<name>ars-masterdata-client</name>
