--- a/ars-masterdata/ars-masterdata-service/pom.xml
+++ b/ars-masterdata/ars-masterdata-service/pom.xml
@@ -18,6 +18,10 @@
 			<artifactId>ars-masterdata-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-service-ejb</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
