--- a/ars-reservation/ars-reservation-api/pom.xml
+++ b/ars-reservation/ars-reservation-api/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>ars-api</artifactId>
+    <artifactId>ars-masterdata</artifactId>
     <groupId>com.prodyna.pac.ars</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>..</relativePath>
   </parent>
   <artifactId>ars-reservation-api</artifactId>
   <name>ars-reservation-client</name>
