--- a/ars-frontend/pom.xml
+++ b/ars-frontend/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>ars-reservation-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+                <dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.0.6</version>
+		</dependency>
 		<dependency>
 	<groupId>org.jboss.resteasy</groupId>
 	<artifactId>resteasy-jackson-provider</artifactId>
@@ -52,6 +57,15 @@
 					<mainClass>com.prodyna.pac.ars.frontend.App</mainClass>
 				</configuration>
 			</plugin>
+		 <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-compiler-plugin</artifactId>
+		  <version>2.3.2</version>
+		  <configuration>
+		   <source>1.8</source>
+		   <target>1.8</target>
+		  </configuration>
+		 </plugin>
 		</plugins>
 	</build>
 
