--- a/ars-frontend/pom.xml
+++ b/ars-frontend/pom.xml
@@ -36,16 +36,16 @@
 			<artifactId>ars-reservation-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-                <dependency>
+		<dependency>
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
 			<version>8.0.6</version>
 		</dependency>
 		<dependency>
-	<groupId>org.jboss.resteasy</groupId>
-	<artifactId>resteasy-jackson-provider</artifactId>
-	<version>3.0.8.Final</version>
-</dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>3.0.8.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -57,16 +57,42 @@
 					<mainClass>com.prodyna.pac.ars.frontend.App</mainClass>
 				</configuration>
 			</plugin>
-		 <plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-compiler-plugin</artifactId>
-		  <version>2.3.2</version>
-		  <configuration>
-		   <source>1.8</source>
-		   <target>1.8</target>
-		  </configuration>
-		 </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.prodyna.pac.ars.frontend.App</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 
 
