frontend assembly with shade, free aircrafts (no current reservation)

--- a/ars-masterdata/ars-masterdata-service/pom.xml
+++ b/ars-masterdata/ars-masterdata-service/pom.xml
@@ -23,5 +23,12 @@
 			<artifactId>ars-service-ejb</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-masterdata-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>ejb</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
