--- a/ars-assembly/pom.xml
+++ b/ars-assembly/pom.xml
@@ -68,5 +68,10 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<type>ear</type>
 		</dependency>
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-frontend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
