--- a/ars-reservation/ars-reservation-service/pom.xml
+++ b/ars-reservation/ars-reservation-service/pom.xml
@@ -20,6 +20,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-masterdata-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
 			<artifactId>ars-service-ejb</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
