--- a/ars-frontend/pom.xml
+++ b/ars-frontend/pom.xml
@@ -46,6 +46,16 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>3.0.8.Final</version>
 		</dependency>
+	 <dependency>
+	  <groupId>org.jfxtras</groupId>
+	  <artifactId>jfxtras-controls</artifactId>
+	  <version>8.0-r1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.jfxtras</groupId>
+	  <artifactId>jfxtras-agenda</artifactId>
+	  <version>8.0-r1</version>
+	 </dependency>
 	</dependencies>
 	<build>
 		<plugins>
