bugfix initializer, added mbean utils, added readme and service documentation

--- a/ars-masterdata/ars-masterdata-service/pom.xml
+++ b/ars-masterdata/ars-masterdata-service/pom.xml
@@ -30,5 +30,24 @@
 			<type>ejb</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>3.0.8.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>3.0.8.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.prodyna.pac.ars</groupId>
+			<artifactId>ars-service-rest</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<classifier>classes</classifier>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
